[gd_scene load_steps=33 format=3 uid="uid://c4cjlvxytfe0k"]

[ext_resource type="Script" path="res://Scripts/Characters/NPC/npc_new.gd" id="1_1x5vc"]
[ext_resource type="Texture2D" uid="uid://bmmw0n2auju8w" path="res://Assets/CharactersSprites/Mariem Fixed (1).png" id="2_lwa77"]
[ext_resource type="Texture2D" uid="uid://mrfgvbk3pgwq" path="res://Assets/NpcInteractions/exclamation mark.png" id="3_cvuj4"]
[ext_resource type="PackedScene" uid="uid://brt7mbbpey68h" path="res://Scenes/Dialogues/dialogue.tscn" id="4_dvaav"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fog3q"]
atlas = ExtResource("2_lwa77")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv0gb"]
atlas = ExtResource("2_lwa77")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx5ta"]
atlas = ExtResource("2_lwa77")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwq56"]
atlas = ExtResource("2_lwa77")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0h5n"]
atlas = ExtResource("2_lwa77")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6l01"]
atlas = ExtResource("2_lwa77")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmohi"]
atlas = ExtResource("2_lwa77")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6k2n"]
atlas = ExtResource("2_lwa77")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vrs0"]
atlas = ExtResource("2_lwa77")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r2n4"]
atlas = ExtResource("2_lwa77")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_piwxv"]
atlas = ExtResource("2_lwa77")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_krobi"]
atlas = ExtResource("2_lwa77")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg6k4"]
atlas = ExtResource("2_lwa77")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkl73"]
atlas = ExtResource("2_lwa77")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6lfu"]
atlas = ExtResource("2_lwa77")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yka14"]
atlas = ExtResource("2_lwa77")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6c3i"]
atlas = ExtResource("2_lwa77")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yojiv"]
atlas = ExtResource("2_lwa77")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_puhiq"]
atlas = ExtResource("2_lwa77")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdi26"]
atlas = ExtResource("2_lwa77")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c2n2m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fog3q")
}],
"loop": true,
"name": &"Look_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv0gb")
}],
"loop": true,
"name": &"Look_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx5ta")
}],
"loop": true,
"name": &"Look_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwq56")
}],
"loop": true,
"name": &"Look_Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0h5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6l01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmohi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6k2n")
}],
"loop": true,
"name": &"Walk_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vrs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r2n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piwxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krobi")
}],
"loop": true,
"name": &"Walk_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg6k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkl73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6lfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yka14")
}],
"loop": true,
"name": &"Walk_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6c3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yojiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puhiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdi26")
}],
"loop": true,
"name": &"Walk_Up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qdtn0"]
atlas = ExtResource("3_cvuj4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm2o3"]
atlas = ExtResource("3_cvuj4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxo6q"]
atlas = ExtResource("3_cvuj4")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1160"]
atlas = ExtResource("3_cvuj4")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_m5c52"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdtn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm2o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxo6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1160")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g3hxb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nbl37"]
radius = 37.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_1x5vc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c2n2m")
animation = &"Walk_Up"

[node name="exclam" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
position = Vector2(0, -28)
sprite_frames = SubResource("SpriteFrames_m5c52")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_g3hxb")

[node name="Chat_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chat_detection_area"]
shape = SubResource("CircleShape2D_nbl37")

[node name="dialogue" parent="." instance=ExtResource("4_dvaav")]
offset_left = -50.0
offset_top = -69.0
offset_right = -50.0
offset_bottom = -69.0

[connection signal="body_entered" from="Chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="Chat_detection_area" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="d_finished" from="dialogue" to="." method="_on_dialogue_d_finished"]
